Fixed alignment of the graph and story points.

--- a/reporting/impl/src/main/resources/reports/resources/css/windup.css
+++ b/reporting/impl/src/main/resources/reports/resources/css/windup.css
@@ -7,6 +7,10 @@ body {
   margin:10px;
 }
 
+.summaryMargin {
+	padding:16px;
+	border-bottom:1px solid #CCC;
+}
 .theme-dropdown .dropdown-menu {
   display: block;
   position: static;
